<resources>
    <string name="app_name">ToDoList</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="usernameHint">Enter Your Username</string>
    <string name="password">Password</string>
    <string name="passwordHint">********</string>
    <string name="loginText1">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="emptyText1">What do you want to do today?</string>
    <string name="emptyText2">Tap + to add your tasks</string>
    <string name="taskText">My Task</string>
    <string name="empty_image">empty image</string>
    <string name="add_button">add button</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="priority">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="next_button">next button</string>
    <string name="task_time">Task Time :</string>
    <string name="task_priority">Task Priority</string>
    <string name="task_category">Task Category</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="back_button">back button</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="grocery">Grocery</string>
    <string name="work">Work</string>
    <string name="sport">Sport</string>
    <string name="design">Design</string>
    <string name="university">University</string>
    <string name="social">Social</string>
    <string name="music">Music</string>
    <string name="health">Health</string>
    <string name="movie">Movie</string>
    <string name="add_category">Add Category</string>
    <string name="logout_button">logout button</string>
</resources>