<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.task.DetailTaskActivity">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="36dp"
        android:text="@string/title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backButton" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="48dp"
        android:text="@string/task_time"
        android:textSize="16sp"
        android:drawablePadding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:drawableStartCompat="@drawable/timer" />

    <TextView
        android:id="@+id/addTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:padding="5dp"
        android:background="@drawable/label"
        android:backgroundTint="@color/blue"
        android:text="00:00"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/timerText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/timerText"
        app:layout_constraintTop_toTopOf="@id/timerText" />

    <TextView
        android:id="@+id/priorityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/task_priority"
        android:textSize="16sp"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/timerText"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/flag" />

    <TextView
        android:id="@+id/addPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:padding="5dp"
        android:background="@drawable/label"
        android:backgroundTint="@color/blue"
        android:text="0"
        android:textSize="12sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/priorityText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/priorityText"
        app:layout_constraintTop_toTopOf="@id/priorityText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        android:text="@string/task_category"
        android:textSize="16sp"
        android:drawablePadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/priorityText"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableStartCompat="@drawable/tag" />

    <TextView
        android:id="@+id/addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:padding="5dp"
        android:background="@drawable/label"
        android:backgroundTint="@color/blue"
        android:text="none"
        android:textSize="12dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/categoryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/categoryText"
        app:layout_constraintTop_toTopOf="@id/categoryText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:drawablePadding="12dp"
        android:text="@string/delete_task"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textSize="16sp"
        android:clickable="true"
        app:drawableStartCompat="@drawable/trash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categoryText"
        android:focusable="true" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/edit_task"
        android:contentDescription="@string/next_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>